--- a/templates/generateStep1.html
+++ b/templates/generateStep1.html
@@ -122,7 +122,7 @@
   
   <script>
     
-    const initRoomDistribution = {
+    /*const initRoomDistribution = {
       "Room Alpha": [
         ["Alice", "Solar Energy", "Panels"], ["Bob", "Solar Energy", "Mirrors"],
         ["Cara", "AI", "Chatbots"], ["Dan", "AI", "Vision"]
@@ -139,8 +139,8 @@
       ]
     };
     
-    const capacityDict={"Room Alpha": 4, "Room Beta": 6, "Room Gamma":4, "Room Delta": 4};
-    /*
+    const capacityDict={"Room Alpha": 4, "Room Beta": 6, "Room Gamma":4, "Room Delta": 4};*/
+    
     var capacityDict={};
 	  
     fetch('/get_data')
@@ -152,7 +152,7 @@
       // You can store or log `data.backupRoomDict` if needed
     })
     .catch(err => console.error("Failed to fetch room data:", err));
-	*/
+	
     const topicColors = [
       "#ffcccc", "#ccffff", "#ccffcc", "#ffe0b3", "#e0ccff",
       "#ffffcc", "#ccffe6", "#ffd9ec", "#d6f5d6", "#ebd6ff",
@@ -304,8 +304,8 @@
     }
 
     // Initialize page
-    createRoomElements(initRoomDistribution);
-	document.getElementById("generate").style.display = "block";
+    /*createRoomElements(initRoomDistribution);
+	document.getElementById("generate").style.display = "block";*/
     
     function generateSchedules() {
       const roomDict = {};
