--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -607,6 +607,7 @@
     
     function checkDistribution() {
     	document.getElementById("checkMessage").style.display = "block";
+	document.getElementById("checkMessage").style.color = "white";    
 	document.getElementById("generate").disabled=false;
     }
     
