--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -202,7 +202,7 @@
 
   <p id="checkMessage" style="display: none; color:white;">All good!</p>
   <button id="check" class="button" onclick="checkDistribution()">Check</button>	
-  <button id="generate" class="button" onclick="generateSchedules() disabled=true">Generate schedules</button>
+  <button id="generate" class="button" onclick="generateSchedules() disabled=true>Generate schedules</button>
   
   
   <script>
