--- a/templates/generateStep1.html
+++ b/templates/generateStep1.html
@@ -59,7 +59,7 @@
       display: flex;
       justify-content: center;
       width: 100%;
-      align-items: center;
+      /*align-items: center;*/
       border: none;
       margin-bottom: 20px;
     }
