--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -374,7 +374,7 @@
     	clearScreen();
 		document.getElementById("generate").innerText = "Generate Schedules";
 	    	document.getElementById("check").innerText = "Check";
-    
+    		document.getElementById("checkMessage").innerText = "All good!";
     	var topicColorMap = {};
     	var colorIndex = 0;
     
