--- a/templates/select.html
+++ b/templates/select.html
@@ -140,7 +140,7 @@
   <!-- Main UI -->
   <div class="wrapper">
     <div class="box">
-      <button class="big-button">Complete<br>Questionnaire</button>
+      <button class="big-button" onclick="questionaire()">Complete<br>Questionnaire</button>
     </div>
 
     <div class="box">
@@ -165,5 +165,9 @@
         menu.style.display = 'none';
       }
     });
+    
+    function questionaire() {
+    	window.location.href = "seniorQuestionaire";
+    }
   </script>
 </body>
