--- a/templates/select.html
+++ b/templates/select.html
@@ -167,7 +167,7 @@
     });
     
     function questionaire() {
-    	window.location.href = "seniorQuestionaire";
+    	window.location.href = "questionaire";
     }
   </script>
 </body>
