--- a/templates/select.html
+++ b/templates/select.html
@@ -140,7 +140,7 @@
   <!-- Main UI -->
   <div class="wrapper">
     <div class="box">
-      <button class="big-button" onclick="questionaire()">Complete<br>Questionnaire</button>
+      <button class="big-button" onclick="seniorQuestionnaire()">Complete<br>Questionnaire</button>
     </div>
 
     <div class="box">
@@ -166,8 +166,8 @@
       }
     });
     
-    function questionaire() {
-    	window.location.href = "questionaire";
+    function seniorQuestionnaire() {
+    	window.location.href = "seniorQuestionnaire";
     }
   </script>
 </body>
