--- a/templates/select.html
+++ b/templates/select.html
@@ -167,7 +167,7 @@
     });
     
     function seniorQuestionnaire() {
-    	window.location.href = "seniorQuestionnaire";
+    	/*window.location.href = "seniorQuestionnaire";*/
     }
   </script>
 </body>
