--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -82,6 +82,12 @@ final<!DOCTYPE html>
       background-color: #870c0cff;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
+   
+    .extra{
+    margin-top: 20px;
+        color: #000000;
+     }
+   
   </style>
 </head>
 <body>
@@ -106,10 +112,13 @@ final<!DOCTYPE html>
       </label>
     </div>
 
+
     <button type="submit">Finish</button>
+    <div class="extra">
+<button type="submit" style="background-color: #6f0404ff;">Back to Moderator Page</button>
+    </div>
   </form>
 </div>
 
 </body>
 </html>
-
