--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -13,6 +13,8 @@
         font-family: 'Assistant', sans-serif;
         align-content: center;
     }
+    
+    
     .infoInputs {
     	width: 40%;
         length: 90%;
@@ -21,9 +23,9 @@
         margin: 10px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        align-content: stretch;
+        align-content: center;
     }
     .generateStart {
     	width: 30%;
