--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -22,6 +22,7 @@
         padding: 10px;
         margin: 10px;
         display: flex;
+        
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
@@ -33,6 +34,7 @@
         background-color: #d9d9d9;
         margin: 10px;
         padding: 20px;
+        
         display: flex;
         align-items: space-around;
         justify-content: center;
@@ -52,6 +54,8 @@
         background-color: #B51111;
         align-self: center;
         padding: 15px;
+        max-width: 700px;
+        position: sticky;
         text-align: center;
         color: #ffffff;
         margin-top: 20px;
