--- a/templates/upload.html
+++ b/templates/upload.html
@@ -76,30 +76,47 @@ font-size: 22px;
 font-family: Times New Roman;
 width:50px;
 }
+
+    input[type="file"] {
+        font-size: 18px; /* Increase text size */
+        cursor: pointer; /* Make it clickable */
+    }
+
+    
     </style>
 
 </head>
 <body style="margin: 20px;">
     <h1 style="color:white; background-color:#B51111; text-align: center;">SMCS Symposium Schedule Generator</h1>
 
-    <h2 style="color:#B51111">Spreadsheet Link</h2>
-    <p>Enter the spreadsheet link below</p>
-    <input id="spreadsheetUrl" type="text" name="url" style="width:2000px; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
+    <h2 style="color:#B51111">Senior Responses - Add Spreadsheet</h2>
+    <p>Download the spreadsheet as a csv file and upload it here</p>
+
+    <form id="uploadForm" enctype="multipart/form-data">
+    	<input class="custom-file-upload" type="file" id="csvFile" accept=".csv" required>
+	</form>
+    
+    <p>OR</p>
+    
+    <p>Make the spreadsheet public and enter the link below</p>
+    <input id="spreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
     
     <br><br><br>
     <hr>
-    <h2 style="color:#B51111">Columns</h2>
+    <h2 style="color:#B51111">Senior Responses - Columns</h2>
     <p>Number of column containing...</p>
     <form id="columnForm1" class="container" id="columnForm" style="font-size: 22px;">
         <p>Last name</p> <input type="number" id="lastName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="3">
         <p>First name</p> <input type="number" id="firstName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="4">
         <p>Name of project</p> <input type="number" id="projectName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="5">
         <p>Project topic</p> <input type="number" id="projectTopic" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="6">
+        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="18">
     </form>
     <form id="columnForm2" class="container" id="columnForm" style="font-size: 22px;">
         <p>Availability</p> <input type="number" id="availability" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="7">
+        <p>Presider of Choice</p> <input type="number" id="presider" class="columnnumbers" value="8">
+    	<p>Presider Introduction</p> <input type="number" id="presiderIntro" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="10">
         <p>Presenting with friend(s)</p> <input type="number" id="friends" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="15">
-        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="18">
     </form>
 
     <br>
@@ -136,7 +153,8 @@ PD 6, Thursday, December 21st</textarea>
     <script>
         function checkInputs() {
             // Get input elements
-            const input0 = document.getElementById("spreadsheetUrl").value.trim();
+            const input20 = document.getElementById("csvFile").files.length
+            const input0 = document.getElementById("spreadsheetUrl").value;
             const input1 = document.getElementById("lastName").value.trim();
             const input2 = document.getElementById("firstName").value.trim();
             const input3 = document.getElementById("projectName").value.trim();
@@ -146,11 +164,12 @@ PD 6, Thursday, December 21st</textarea>
             const input7 = document.getElementById("blurb").value.trim();
             const input8 = document.getElementById("roomsInput").value.trim();
             const input9 = document.getElementById("timesInput").value.trim();
+            const input10 = document.getElementById("presider").value.trim();
+            const input11 = document.getElementById("presiderIntro").value.trim();
             const button = document.getElementById("parseData");
-
+	
             // Enable button if both fields have values
-            console.log("its being fricig called");
-            button.disabled = !(input0 && input1 && input2 && input3 && input4 && input5 && input6 && input7 && input8 && input9);
+            button.disabled = !((input0 || (input20!=0)) && input1 && input2 && input3 && input4 && input5 && input6 && input7 && input8 && input9 && input10 && input11);
         }
 	checkInputs();
         // Attach event listeners to inputs
@@ -162,9 +181,11 @@ PD 6, Thursday, December 21st</textarea>
         document.getElementById("availability").addEventListener("input", checkInputs);
         document.getElementById("friends").addEventListener("input", checkInputs);
         document.getElementById("blurb").addEventListener("input", checkInputs);*/
+        document.getElementById("csvFile").addEventListener("input", checkInputs);
+        document.getElementById("spreadsheetUrl").addEventListener("input", checkInputs);
         document.getElementById("columnForm1").addEventListener("input", checkInputs);
-	document.getElementById("columnForm2").addEventListener("input", checkInputs);
-	document.getElementById("roomsInput").addEventListener("input", checkInputs);
+		document.getElementById("columnForm2").addEventListener("input", checkInputs);
+		document.getElementById("roomsInput").addEventListener("input", checkInputs);
         document.getElementById("timesInput").addEventListener("input", checkInputs);
 
 	    
@@ -173,7 +194,11 @@ PD 6, Thursday, December 21st</textarea>
             // Get the textbox values
 		document.getElementById("troubleshoot").style.display="none";
 		
-            const url = document.getElementById('spreadsheetUrl').value;
+            var url = document.getElementById('spreadsheetUrl').value;
+            if (!(url)) {
+            	url="none";
+            }
+            
             const firstNameCol = document.getElementById('firstName').value;
             const lastNameCol = document.getElementById('lastName').value;
             const projectNameCol = document.getElementById('projectName').value;
@@ -205,8 +230,18 @@ PD 6, Thursday, December 21st</textarea>
 		days.push(currentDay);
 	    }
 		
+        const fileInput = document.getElementById("csvFile");
+        if (fileInput.files.length === 0) {
+			var formData="none";
+  		}
+		else {
+          var formData = new FormData();
+          formData.append("file", fileInput.files[0]);
+        }
+        
             // Prepare the data to send
             const data = {
+            	csv: formData,
                 url: url,
                 firstNameCol: firstNameCol,
                 lastNameCol: lastNameCol,
@@ -216,8 +251,8 @@ PD 6, Thursday, December 21st</textarea>
                 friendsCol: friendsCol,
                 blurbCol: blurbCol,
                 allTimes: allTimes,
-		allRooms: allRooms,
-		days: days
+                allRooms: allRooms,
+                days: days
             };
             
             console.log(JSON.stringify(data));
@@ -262,7 +297,7 @@ PD 6, Thursday, December 21st</textarea>
   var displayAllTimesFromData;
   var displayHeaders;
   var dataDict;
-  var orderedIndices = orderedIndices=[1,4,0,2];
+  var orderedIndices = orderedIndices=[1,4,0,2,5,6];
   var container = document.createElement("div");
 	    
   function displayTable() {
