--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -9,7 +9,7 @@
         display: flex;
         background-color: #000000;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         font-family: 'Assistant', sans-serif;
         align-content: center;
     }
@@ -21,9 +21,11 @@
         background: #d9d9d9;
         padding: 10px;
         margin: 10px;
+        margin-top: 10px;
         display: flex;
-        
+        height: 100%;
         flex-wrap: wrap;
+        height: 100%;
         justify-content: center;
         align-items: center;
         align-content: center;
@@ -34,7 +36,6 @@
         background-color: #d9d9d9;
         margin: 10px;
         padding: 20px;
-        
         display: flex;
         align-items: space-around;
         justify-content: center;
