--- a/templates/upload.html
+++ b/templates/upload.html
@@ -241,6 +241,7 @@ PD 6, Thursday, December 21st</textarea>
         }
             // Prepare the data to send
             const data = {
+		csv:csv,
                 url: url,
                 firstNameCol: firstNameCol,
                 lastNameCol: lastNameCol,
