--- a/templates/upload.html
+++ b/templates/upload.html
@@ -362,7 +362,8 @@ PD 6, Thursday, December 21st</textarea>
   var displayAllTimesFromData;
   var displayHeaders;
   var dataDict;
-  var orderedIndices = orderedIndices=[1,4,0,2,5,6,7];
+  var orderedIndices =[1,4,0,2,5,6,7];
+  var juniorOrderedIndices = [0,1]; 
   var container = document.createElement("div");
 	    
   function displayTable() {
