--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -110,6 +110,11 @@ final<!DOCTYPE html>
         <p>Upload<br>Senior<br>Roster</p>
         <input type="file" name="seniorRoster">
       </label>
+      
+      <label class="upload-label">
+        <p>Upload<br>Mentor<br>List</p>
+        <input type="file" name="juniorRoster">
+      </label>
     </div>
 
 
